# machine-applications

./: .gitignore  CODEOWNERS  Dockerfile  Makefile  README.md  create_pyprojecttoml_in_iocs.sh  docker-compose.yaml  requirements.txt  travis-tentative.yml
as-ap-currinfo/: MANIFEST.in  VERSION  pyproject.toml  setup.py
as-ap-injctrl/: MANIFEST.in  README.md  pyproject.toml  setup.py
as-ap-machshift/: MANIFEST.in  README.md  pyproject.toml  setup.py
as-ap-opmode/: VERSION  pyproject.toml  setup.py
as-ap-opticscorr/: MANIFEST.in  README.md  pyproject.toml  setup.py
as-ap-posang/: MANIFEST.in  Makefile  README.md  VERSION  pyproject.toml  setup.py
as-ap-sofb/: INSTALL  MANIFEST.in  pyproject.toml  setup.py
as-ps/: Makefile  README.md  VERSION  pyproject.toml  setup.py
as-ps-diag/: MANIFEST.in  README.md  pyproject.toml  setup.py
as-pu-conv/: MANIFEST.in  README.md  pyproject.toml  setup.py
as-pu-diag/: MANIFEST.in  README.md  pyproject.toml  setup.py
as-rf-diag/: MANIFEST.in  README.md  pyproject.toml  setup.py
as-ti-control/: MANIFEST.in  README.md  VERSION  pyproject.toml  setup.py
bl-ap-imgproc/: INSTALL  MANIFEST.in  README.md  build.sh  pyproject.toml  setup.py
cax-ap-cam/: INSTALL  MANIFEST.in  README.md  build.sh  setup.py
config/: config.toml  drive_messages.yaml
etc/: ser2net.conf
li-ap-diag/: MANIFEST.in  README.md  pyproject.toml  setup.py
li-ap-energy/: INSTALL  MANIFEST.in  README.md  pyproject.toml  setup.py
li-di-charge/: INSTALL  MANIFEST.in  README.md  requirements.txt  setup.py
li-ps-conv/: MANIFEST.in  README.md  pyproject.toml  setup.py
pcaspy-template-generator/: sirius-instantiate-pcaspy-template.py  sirius-instantiate-pcaspy-template.sh
scripts/: SerialPortTests.py  jupyter_tests.ipynb  socatTest.py  teste.txt
si-ap-fofb/: MANIFEST.in  README.md  pyproject.toml  setup.py
si-ap-fofb/scripts/: sirius-ioc-si-ap-fofb.py
si-ap-fofb/si_ap_fofb/: __init__.py  si_ap_fofb.py
si-ap-idff/: MANIFEST.in  README.md  pyproject.toml  setup.py
si-ap-manaca/: INSTALL  MANIFEST.in  README.md  setup.py
si-ap-orbintlk/: MANIFEST.in  README.md  pyproject.toml  setup.py
si-ap-stabinfo/: MANIFEST.in  README.md  pyproject.toml  setup.py
si-di-fpmosc/: MANIFEST.in  VERSION  pyproject.toml  setup.py
si-id-conv/: Makefile  README.md  pyproject.toml  setup.py
si-id-epu/: Dockerfile  README.md  requirements.txt
si-id-epu50/: MANIFEST.in  README.md  pyproject.toml  setup.py  (+1 more)
(+591 files in other folders)
